main/default/objects/Dependency_Capture__c/Dependency_Capture__c.object-meta.xml
<CustomObject>
    <label>Dependency Capture</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Dependency Capture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependency Captures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>