main/default/objects/Dependency_Capture__c/fields/Capture_ID__c.field-meta.xml
<CustomField>
    <fullName>Capture_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capture ID</label>
    <referenceTo>Compass_Capture__c</referenceTo>
    <relationshipLabel>Dependency Capture</relationshipLabel>
    <relationshipName>Dependency_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>