main/default/objects/Dependency_Capture__c/fields/CORE_Locations__c.field-meta.xml
<CustomField>
    <fullName>CORE_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CORE Locations</description>
    <label>CORE Locations</label>
    <type>Checkbox</type>
</CustomField>