main/default/objects/Dependency_Capture__c/fields/Dependency_Description__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Description__c</fullName>
    <label>Dependency Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>