main/default/objects/Dependency_Capture__c/fields/Dependency_Kind__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Kind__c</fullName>
    <label>Dependency Kind</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Task/Activity</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Budget/Cost</fullName>
            </value>
            <value>
                <fullName>Another Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>