main/default/objects/Dependency_Capture__c/fields/Dependency_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Relationship__c</fullName>
    <label>Dependency Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>START-FINISH</fullName>
            </value>
            <value>
                <fullName>START-START</fullName>
            </value>
            <value>
                <fullName>FINISH-START</fullName>
            </value>
            <value>
                <fullName>FINISH-FINISH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>