main/default/objects/Dependency_Capture__c/fields/Dependency_Title__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Title__c</fullName>
    <label>Dependency Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>