main/default/objects/Dependency_Capture__c/fields/Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Type__c</fullName>
    <label>Dependency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory-External</fullName>
            </value>
            <value>
                <fullName>Mandatory-Internal</fullName>
            </value>
            <value>
                <fullName>Discretionary-External</fullName>
            </value>
            <value>
                <fullName>Discretionary-Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>