main/default/objects/Dependency_Capture__c/fields/Dependent_Team__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Team__c</fullName>
    <label>Dependent Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>