main/default/objects/Dependency_Capture__c/fields/Follow_up_required__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow up required?</label>
    <type>Checkbox</type>
</CustomField>