main/default/objects/Dependency_Capture__c/fields/Lab_Order_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lab Order Catalog</description>
    <label>Lab Order Catalog</label>
    <type>Checkbox</type>
</CustomField>