main/default/objects/Dependency_Capture__c/fields/Other_Interested_Parties__c.field-meta.xml
<CustomField>
    <fullName>Other_Interested_Parties__c</fullName>
    <label>Other Interested Parties</label>
    <type>TextArea</type>
</CustomField>