main/default/objects/Dependency_Capture__c/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dependency Captures</relationshipLabel>
    <relationshipName>Dependency_Captures</relationshipName>
    <type>Lookup</type>
</CustomField>