main/default/objects/Dependency_Capture__c/fields/Target_Coordination_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Coordination_Date__c</fullName>
    <label>Target Coordination Date</label>
    <type>Date</type>
</CustomField>