main/default/objects/Dependency_Capture__c/fields/URA_Dependency__c.field-meta.xml
<CustomField>
    <fullName>URA_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>URA Dependency</description>
    <label>URA Dependency</label>
    <type>Checkbox</type>
</CustomField>