main/default/objects/Dependency_Capture__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dependency_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>